<resources>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <string name="app_name">Tabun</string>
    <string name="favourites">Favourites</string>
    <string name="refresh">Refresh</string>
    <string name="write_reply">Reply</string>
    <string name="copy_link">Copy link</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="app">App</string>
    <string name="theme">Theme</string>
    <string name="save_comments_state">Save comment states</string>
    <string name="select_text">Selectable text</string>
    <string name="load_videos">Display videos</string>
    <string name="load_images">Load images</string>
    <string name="content">Content</string>
    <string name="remove_actionbar_shadow">Remove actionbar shadow</string>
    <string name="open_topics_in_separate_windows">Open topics in separate windows</string>
    <string name="uploading_image">Uploading to Imgur…</string>
    <string name="page_loading_failed">Failed to load page\n</string>
    <string name="logout_promt">Log out?</string>
    <string name="not_now">Not now</string>
    <string name="enter_image_url">Enter image url</string>
    <string name="replying_topic">Replying to topic</string>
    <string name="topic_link_copied">Topic link copied to clipboads</string>
    <string name="comment_link_copied">Comment link copied to clipboads</string>
    <string name="sending_messsge">Sending…</string>
    <string name="replying_comment" formatted="false">Replying to %d@%s</string>
    <string name="editing_comment" formatted="false">Editing %d@%s</string>
    <string name="message_sent">Message sent successfully</string>
    <string name="undefined_error">Unknown error happened</string>
    <string name="main_page_label">Main</string>
    <string name="messages_label">Messages</string>
    <string name="publications_label">Publications</string>
    <string name="settings_label">Settings</string>
    <string name="logout_label">Log out</string>
    <string name="to_the_bottom">To the bottom</string>

    <string name="continuous_refresh">Autorefresh</string>

    <string name="interval_5_seconds">Every 5 seconds</string>
    <string name="interval_10_seconds">Slightly more frequenly, than sometimes</string>
    <string name="interval_13_seconds">Every 13 seconds</string>
    <string name="interval_15_seconds">Sometimes</string>
    <string name="interval_30_seconds">Twice a minute</string>
    <string name="interval_42_seconds">Every 42 seconds</string>
    <string name="interval_1_minute">Every minute</string>
    <string name="interval_413_seconds">3V3RY 413 S3CONDS</string>
    <string name="interval_1_day">Every day</string>
    <string name="interval_1000_years">Approx. every thousand years</string>
    <string name="interval_65536_ms">Every 1000000000000000₂ milliseconds</string>
    <string name="interval_9000_ms">Every 9000 milliseconds</string>
    <string name="show_delimiters">Show delimiters</string>
    <string name="markread">Mark as read</string>
    <string name="delete">Delete</string>
    <string name="force_russian">Force Russian language</string>
    <string name="deleted">sent to the Moon</string>
    <string name="markedRead">marked as read</string>
    <string name="link">Link</string>
    <string name="spoiler_title">Spoiler title</string>
    <string name="wrong_credentials">Invalid credentials</string>
    <string name="username_empty">Username cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="search">Search</string>
    <string name="wehavegotanupdate">We\'ve got an update for ya.</string>
    <string name="update">Update</string>
    <string name="reload_page">Reload page</string>

    <string-array name="exit">
        <item>Yes</item>
    </string-array>

    <string-array name="image_chooser_entries">
        <item>Take a photo</item>
        <item>Choose from existing</item>
        <item>Enter image link</item>
    </string-array>

    <string-array name="theme_names">
        <item>Light</item>
        <item>Dark</item>
        <item>Green</item>
        <item>Marshmallow</item>
        <item>Celestia</item>
        <item>Applejack</item>
        <item>Darth Applejack</item>
        <item>Moondancer</item>
        <item>Darth Moondancer</item>
    </string-array>

    <string-array name="pub_pager_titles">
        <item>Topics</item>
        <item>Comments</item>
    </string-array>

    <plurals name="comment_num">
        <item quantity="zero">comments</item>
        <item quantity="one">comment</item>
        <item quantity="two">comments</item>
        <item quantity="few">comments</item>
        <item quantity="many">comments</item>
        <item quantity="other">comments</item>
    </plurals>

    <plurals name="letter_num">
        <item quantity="zero">letters</item>
        <item quantity="one">letter</item>
        <item quantity="two">letters</item>
        <item quantity="few">letters</item>
        <item quantity="many">letters</item>
        <item quantity="other">letters</item>
    </plurals>
    <string name="allow_mobile_images">Images on cell network</string>
    <string name="load_from_profile">Load from profile</string>
    <string name="add_blog">Add blog</string>
    <string name="edit_list">Edit drawer...</string>
    <string name="loading_user_data">Loading user data</string>

</resources>
