<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.ponyhawks.android.activity.TopicActivity">
    <item
        android:id="@+id/reply"
        android:icon="@drawable/ic_reply"
        android:title="@string/write_reply"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/copy_link"
        android:title="@string/copy_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/to_the_bottom"
        android:title="@string/to_the_bottom"
        app:showAsAction="never" />
    <item
        android:id="@+id/continuous_refresh"
        android:title="@string/continuous_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:showAsAction="never" />
</menu>
