<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.ponyhawks.android.activity.TopicActivity">
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/reply"
        android:icon="@drawable/ic_reply"
        android:title="@string/write_reply"
        app:showAsAction="always" />
    <item
        android:id="@+id/copy_link"
        android:icon="@drawable/ic_link"
        android:title="@string/copy_link"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_star_outline"
        android:title="@string/add_to_favourites"
        app:showAsAction="ifRoom" />
</menu>
